# LLaDA-V-Unofficial

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: implementation-gap.md
configs/: default.yaml
scripts/: smoke_test.py
src/lladav_unofficial/: __init__.py  model.py
